<resources>
    <string name="app_name">Open sport management</string>
    <string name="app_name_shorten">OpenSportMgmt</string>

    <!-- Strings related to login -->
    <string name="password">password</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="login_text">Log in</string>
    <string name="username_error">This username is invalid</string>
    <string name="password_error">This password is not correct</string>

    <string name="title_activity_main">OpenSportManagement</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_messages">Messages</string>
    <string name="network_error">Network error</string>
    <string name="event">Event</string>
    <string name="match">Match</string>
    <string name="vs">VS</string>
    <string name="event_item_date_example">Lundi 1 Janvier 2018</string>
    <string name="visitor_example">Visitor</string>
    <string name="local_team_example">Local</string>
    <string name="title_events">Events</string>
    <string name="description">Description</string>
    <string name="participants_example">1</string>
    <string name="local_team_description">Local team</string>
    <string name="visitor_team_description">Visitor team</string>
    <string name="event_item_hour_example">20:50</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="event_description">This is a description of this event</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="some_text">Some text super ultra giga long to check if the data is correctly displayed on the screen or not or not or not or not</string>
    <string name="someuser_and_date">someUser - 01/01/2016 10:47</string>
    <string name="example_of_topic">Example of topic</string>
    <string name="last_message_with_username">Romain: Last message with username</string>
    <string name="example_date_message">10/01/2018</string>
    <string name="type_your_message">Type your message here</string>
    <string name="waiting">Waiting</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="tv_present_number">8</string>
    <string name="tv_absent_number">5</string>
    <string name="tv_waiting_number">3</string>
    <string name="username_example">Romain Ziba</string>
    <string name="presence">Presence</string>
    <string name="information">Information</string>
    <string name="players">Players</string>
    <string name="transition_match_description">transition_match_description</string>
    <string name="event_name">Name of the event</string>
    <string name="punctual">Punctual</string>
    <string name="recurrent">Recurrent</string>
    <string name="start_event_date">Start date of the event</string>
    <string name="event_place">Place of the event</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="end_event_date">End date of the event</string>
    <string name="opensportmanagement">OpenSportManagement</string>
    <string name="days_of_recurrence">Days of recurrence</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="begin_time">Begin time</string>
    <string name="end_time">End time</string>
    <string name="select">Select</string>
    <string name="start_end_dates_null_error">Start date and end date must be provided</string>
    <string name="from_to_dates_null_error">From date and to date must be provided</string>
    <string name="user_preferences">User preferences</string>
    <string name="username_key">username</string>
    <string name="username_summary">Name of the user</string>
    <string name="email_key">email</string>
    <string name="email">email</string>
    <string name="email_summary">Email of the user</string>
    <string name="teams">Teams</string>
    <string name="teams_key">teams</string>
    <string name="teams_ids">Team identifiers</string>
    <string name="teams_ids_summary">The identifiers of the teams available for the user</string>
    <string name="load_teams_error">Failed to load available teams</string>
    <string name="retry">Retry</string>
    <string name="logout">Log out</string>
    <string name="not_logged">Not logged</string>
    <string name="message_not_logged">You are currently not logged. You can still use the application offline</string>
    <string name="test_offline">Test</string>
    <string name="ok">Ok</string>
    <string name="choose_team">Choose a team</string>
    <string name="switch_team">Switch team</string>
    <string name="use_offline">Use offline</string>
    <string name="account_details">My profile</string>
    <string name="title_team">Team</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_connection">No connection</string>
    <string name="connection_retrieved">Connected</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="licence_number">Licence number</string>
    <string name="confirm">Confirm</string>
    <string name="edit_email">Edit your email address</string>
    <string name="error_update_profile">Failed to update the profile</string>
    <string name="success_update_profile">Your profile has been successfully updated</string>
    <string name="error_get_profile">Failed to get profile information from network</string>
</resources>
