<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zcorp.opensportmanagement.ui.eventdetails.EventDetailActivity"
    tools:showIn="@layout/activity_event_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_event_present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/present"
                app:layout_constraintEnd_toStartOf="@+id/tv_event_waiting"
                app:layout_constraintTop_toBottomOf="@+id/event_description" />

            <TextView
                android:id="@+id/tv_event_present_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_present_number"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_present"
                app:layout_constraintStart_toStartOf="@+id/tv_event_present"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_present" />

            <TextView
                android:id="@+id/tv_event_absent"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/absent"
                app:layout_constraintStart_toEndOf="@+id/tv_event_waiting"
                app:layout_constraintTop_toTopOf="@+id/tv_event_waiting" />

            <TextView
                android:id="@+id/tv_event_absent_number"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/tv_absent_number"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_absent"
                app:layout_constraintStart_toStartOf="@+id/tv_event_absent"
                app:layout_constraintTop_toTopOf="@+id/tv_event_present_number" />

            <TextView
                android:id="@+id/tv_event_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/waiting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_event_present" />


            <TextView
                android:id="@+id/tv_event_waiting_number"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/tv_waiting_number"
                app:layout_constraintTop_toTopOf="@+id/tv_event_present_number"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_waiting"
                app:layout_constraintStart_toStartOf="@+id/tv_event_waiting" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>
