<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_local_team_match"
        style="@style/TeamImage"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/local_team_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_vs_match"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/houston_rockets" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_local_name_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_local_team_match"
        app:layout_constraintStart_toStartOf="@+id/iv_local_team_match"
        app:layout_constraintEnd_toEndOf="@+id/iv_local_team_match"
        tools:layout_editor_absoluteX="41dp"
        tools:text="@string/local_team_example" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_vs_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vs"
        app:layout_constraintBottom_toBottomOf="@+id/iv_local_team_match"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_local_team_match" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_visitor_name_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_visitor_match"
        app:layout_constraintStart_toStartOf="@+id/iv_visitor_match"
        app:layout_constraintEnd_toEndOf="@+id/iv_visitor_match"
        tools:layout_editor_absoluteX="234dp"
        tools:text="@string/visitor_example" />

    <ImageView
        android:id="@+id/iv_visitor_match"
        style="@style/TeamImage"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/visitor_team_description"
        app:layout_constraintBottom_toBottomOf="@+id/tv_vs_match"
        app:layout_constraintStart_toEndOf="@+id/tv_vs_match"
        app:layout_constraintTop_toTopOf="@+id/tv_vs_match"
        app:srcCompat="@drawable/bos" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>