<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:id="@+id/pb_update_profile"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="-4dp"
        android:max="100"
        android:maxHeight="10dip"
        android:minHeight="10dip"
        android:visibility="invisible" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_first_name"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/firstname">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_first_name"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:inputType="textPersonName"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_name"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/til_profile_first_name"
                android:hint="@string/name">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_name"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:inputType="textPersonName"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_email"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/til_profile_name"
                android:hint="@string/email">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_email"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:inputType="textEmailAddress"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_birthdate"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/til_profile_email"
                android:hint="@string/date_of_birth">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_birthdate"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_phone_number"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/til_profile_birthdate"
                android:hint="@string/phone_number">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_phone_number"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:inputType="phone"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profile_licence_number"
                style="@style/TextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/til_profile_phone_number"
                android:hint="@string/licence_number">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_profile_licence_number"
                    style="@style/TextInputLayout.TextInputEditText"
                    android:inputType="number"
                    android:maxLength="40" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>


